--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2569,7 +2569,7 @@ section {
 --------------------------------------------------------------*/
 .footer {
   color: #fff;
-  background: url("../img/footer-bg.jpg") top center no-repeat;
+  background: url("../img/los-diferentes-tipos-de-sistemas-de-aire-acondicionado-y-cual-es-el-mejor-para-ti-climagava.jpg") top center no-repeat;
   background-size: cover;
   font-size: 14px;
   padding: 80px 0 60px 0;
