--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2687,3 +2687,16 @@ section {
 
 }
 
+carousel-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+  min-width: 100%;
+}
