--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2725,8 +2725,7 @@ section {
 }
 
 
-
-.tarjeta {
+/* .tarjeta {
   border: 1px solid #ccc;
   border-radius: 8px;
   padding: 20px;
@@ -2741,5 +2740,21 @@ section {
 
 .descripcion {
   font-size: 16px;
+} */
+
+
+
+
+.contenedor {
+  width: 100%;
+  max-width: 1200px;
+  height: 450px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
 }
 
+.contenedor .tarjeta {
+  
+}
