--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2744,6 +2744,12 @@ section {
 
 
 
+
+.texto-justificado{
+  text-align: justify;
+  }
+
+
 /* .contenedor {
   width: 100%;
   max-width: 1200px;
