--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2726,16 +2726,16 @@ section {
 
 
 .tarjeta {
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-radius: 8px;
-  padding: 20px;
+  padding: 14px;
   text-align: center;
   margin: 10px;
 }
 
 .icono {
   font-size: 24px;
-  margin-bottom: 10px;
+  margin-bottom: 10px;3
 }
 
 .descripcion {
@@ -2806,3 +2806,26 @@ section {
 
 
 
+
+
+
+.containersect {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
+h1 {
+  color: gray;
+}
+.iconsect {
+  display: inline-block;
+  margin: 10px;
+}
+.icon img {
+  width: 50px;
+  height: 50px;
+}
+.label {
+  color: #020381;
+}
